# prover-verifier-game-with-noise

./: .gitignore  AGENTS.md  LICENSE  implementation_walkthrough.md  pvg_empirical_experiments_guide.md  pyproject.toml
.cursor/plans/: pvg_implementation_guide_68391e0e.plan.md
experiments/: __init__.py  sweep_noise.py
experiments/nlp/: __init__.py  run_experiment.py  snli_binary.py  sweep_noise.py  training.py
experiments/synthetic/: __init__.py  linear_f2.py  run_experiment.py
pvg/: __init__.py  config.py  losses.py  metrics.py  models.py  noise.py  training.py  utils.py
tests/: test_linear_f2.py  test_losses.py  test_models.py  test_nlp_models.py  test_noise.py  test_training.py
