[project]
name = "prover-verifier-game-with-noise"
version = "0.1.0"
description = "Investigating how noisy labels affect Prover-Verifier Game equilibria"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "torch>=2.0.0",
    "numpy>=1.24.0",
    
    # NLP (Tier 2)
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    
    # RL Training (Tier 3)
    "trl>=0.7.0",
    "accelerate>=0.24.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    
    # Experiment tracking
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pvg"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]